# weathery

./: README.md  pyproject.toml
weathery/: __init__.py  main.py
