[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weathery"
version = "0.1.1"
description = "Terminal weather forecast TUI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "textual>=0.29.0",
    "plotext>=5.0.0",
    "rich>=13.0.0",
]

[project.scripts]
weathery = "weathery.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["weathery*"]
